# realtime_voice

./: README.md
src/app/agentConfigs/: index.ts
src/app/agentConfigs/healthcareAppointment/: authentication.ts  index.ts
src/app/simplified-healthcare/: SimplifiedHealthcareApp.tsx  page.tsx
standalone-healthcare-app/: .gitignore
standalone-healthcare-app/backend/: pyproject.toml
standalone-healthcare-app/backend/app/: main.py
standalone-healthcare-app/backend/app/routers/: chat.py  session.py
standalone-healthcare-app/backend/app/services/: healthcare_agent.py
standalone-healthcare-app/frontend/: package.json
standalone-healthcare-app/frontend/.next/server/: server-reference-manifest.json
standalone-healthcare-app/frontend/.next/static/chunks/: webpack.js
standalone-healthcare-app/frontend/.next/static/webpack/: 1359b0ebf6b84508.webpack.hot-update.json  webpack.1359b0ebf6b84508.hot-update.js
standalone-healthcare-app/frontend/src/app/: HealthcareApp.tsx  layout.tsx  page.tsx
standalone-healthcare-app/frontend/src/components/: Transcript.tsx
standalone-healthcare-app/frontend/src/contexts/: EventContext.tsx  TranscriptContext.tsx
standalone-healthcare-app/frontend/src/hooks/: useHandleServerEvent.ts
standalone-healthcare-app/frontend/src/lib/: realtimeConnection.ts
standalone-healthcare-app/frontend/src/types/: index.ts
